Overflow Fix and Fontsize Adjustments
- Decrease the Fontsize of the Main part
- Overflow fixed in previous update

--- a/styles.css
+++ b/styles.css
@@ -91,13 +91,13 @@ video {
 }
 
 .header h1 {
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: bold;
   line-height: 1.2;
 }
 
 .header p {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   line-height: 1.2;
   padding-left: 5px;
   padding-right: 5px;
